--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,12 @@
 </head>
 
 <body>
-
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-
   <div class="main">
     <div class="content">
-      <div id="root"></div>
+      <div id="root" class="rootContainer"></div>
+      <div id="result-root" class="resultContainer"></div>
     </div>
   </div>
-  <div class="bottom">Basic alabanneri</div>
 
   <!--
       To begin the development, run `npm start` or `yarn start`.
