--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
 <body>
   <div class="main">
     <div class="content">
-      <div id="root" class="rootContainer"></div>
-      <div id="result-root" class="resultContainer"></div>
+      <div id="root" class="root"></div>
+      <div id="result-root" class="results"></div>
     </div>
   </div>
 
